Corrected the google sign-in

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -7,7 +7,7 @@
         <div class="sixteen wide column" style="padding: 0;">
           <a routerLink="/my-profile"><img class="ui icon" src="assets/images/user.svg" style="padding-right: 5vmin; width: 11vmin;" alt="user"></a>
           <a routerLink="/wallet"><img class="ui icon" src="assets/images/wallet.svg" style="padding-right: 5vmin; width: 11vmin;" alt="wallet"></a>
-          <img class="ui icon" src="assets/images/previous.svg" style="padding-right: 5vmin; width: 11vmin;" alt="prev" (click)="logOut()">
+          <img class="ui icon" src="assets/images/previous.svg" style="padding-right: 5vmin; width: 11vmin;" alt="prev" routerLink="/share">
         </div>
       </div>
     </div>
