--- a/src/app/lucky-draw-results/lucky-draw-results.component.html
+++ b/src/app/lucky-draw-results/lucky-draw-results.component.html
@@ -27,7 +27,7 @@
               </div>
               <span class="header bolder-font-weight" style="font-size: 5.5vmin; line-height: 2;">Contest #41</span>
               <span class="meta" style="font-size: 2.5vmin; display: block; line-height: 1.5; color: black;">
-                Praveen Kumar on Monday 10 March<br>
+                Amaan Khan on Monday 10 March<br>
                 <img src="assets/images/pile-of-coin-icon.png" class="ui image" style="width: 3%;"> 100 coins
               </span>
             </div>
@@ -39,7 +39,7 @@
               </div>
               <span class="header bolder-font-weight" style="font-size: 5.5vmin; line-height: 2;">Contest #41</span>
               <span class="meta" style="font-size: 2.5vmin; display: block; line-height: 1.5; color: black;">
-                Praveen Kumar on Monday 10 March<br>
+                Amaan Khan on Monday 10 March<br>
                 <img src="assets/images/pile-of-coin-icon.png" class="ui image" style="width: 3%;"> 100 coins
               </span>
             </div>
@@ -51,7 +51,7 @@
               </div>
               <span class="header bolder-font-weight" style="font-size: 5.5vmin; line-height: 2;">Contest #41</span>
               <span class="meta" style="font-size: 2.5vmin; display: block; line-height: 1.5; color: black;">
-                Praveen Kumar on Monday 10 March<br>
+                Amaan Khan on Monday 10 March<br>
                 <img src="assets/images/pile-of-coin-icon.png" class="ui image" style="width: 3%;"> 100 coins
               </span>
             </div>
@@ -69,7 +69,7 @@
               </div>
               <span class="header bolder-font-weight" style="font-size: 5.5vmin; line-height: 2;">Contest #41</span>
               <span class="meta" style="font-size: 2.5vmin; display: block; line-height: 1.5; color: black;">
-                Praveen Kumar on Monday 10 March<br>
+                Amaan Khan on Monday 10 March<br>
                 <img src="assets/images/pile-of-coin-icon.png" class="ui image" style="width: 3%;"> 100 coins
               </span>
             </div>
