--- a/src/app/profile-page/profile-page.component.html
+++ b/src/app/profile-page/profile-page.component.html
@@ -13,8 +13,8 @@
 
       <div class="row" style="padding-top: 5vmin;">
         <div class="sixteen wide column">
-          <div class="bold-font-weight font-roboto text-white font-size-9vw">Praveen Kumar</div>
-          <div class="font-rancho text-white pt-5 line-height-normal" style="font-size: 5vw;">Email: praveen.kumar@gmail.com</div>
+          <div class="bold-font-weight font-roboto text-white font-size-9vw">Amaan Khan</div>
+          <div class="font-rancho text-white pt-5 line-height-normal" style="font-size: 5vw;">Email: amaan.khan@gmail.com</div>
         </div>
       </div>
 
@@ -72,7 +72,7 @@
               </div>
             </button>
 
-            <button class="ui right labeled big icon button" style="background: white;border-radius: 0 0 3vmin 3vmin; padding-bottom: 4vmin;">
+            <button class="ui right labeled big icon button" style="background: white;border-radius: 0 0 3vmin 3vmin; padding-bottom: 4vmin;" onclick="googleSignOut()">
               <div style="width: 20%; height: 100%;">
                 <img class="left floated ui mini image" src="assets/images/logout-icon.png" style="width: 100%; height: 100%;">
               </div>
