--- a/src/app/redeem-page/redeem-page.component.html
+++ b/src/app/redeem-page/redeem-page.component.html
@@ -26,7 +26,7 @@
               <div class="ui grid plr-10">
                 <div class="row" style="background: #48B1BF; padding: 0;">
                   <div class="ten wide column text-white on-side" style="position: absolute;">Paytm</div>
-                  <div class="six wide column right floated ui button font-roboto bold-font-weight off-side" style="padding-left: 0; padding-right: 0;" (click)="changeThePanel($event)">Medimetry</div>
+                  <div class="six wide column right floated ui button font-roboto bold-font-weight off-side" style="padding-left: 0; padding-right: 0;" (click)="changeThePanel($event)">Poornima</div>
                 </div>
               </div>
 
