--- a/src/app/sign-in-page/sign-in-page.component.html
+++ b/src/app/sign-in-page/sign-in-page.component.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div id="name"></div>
         <div class="sixteen wide column pb-5">
-          <button class="ui fluid large button" id="customBtn" style="background-color:  #ffffff; border-radius: 0.5rem;" onclick="Android.showLoginWithGoogle();">
+          <button class="ui fluid large button" id="customBtn" style="background-color:  #ffffff; border-radius: 0.5rem;">
             <img src="assets/images/google-logo.svg" class="ui icon" style="height: 4vw;">
             <span class="font-roboto text-black font-size-5vw light-font-weight">Sign-in with Google</span>
           </button>
@@ -34,7 +34,7 @@
         <div class="sixteen wide column pb-10">
           <span class="ui small label" style="background: transparent;">
             <span class="text-white font-size-3vw">
-              By signing up I accept & agree to <u>Terms of use</u> and <u (click)="hello()">Privacy Policy</u>
+              By signing up I accept & agree to <u>Terms of use</u> and <u>Privacy Policy</u>
             </span>
           </span>
         </div>
