--- a/src/app/wallet-page/wallet-page.component.html
+++ b/src/app/wallet-page/wallet-page.component.html
@@ -19,7 +19,7 @@
               <app-sub-components-current-balance [amount]="'197.0'"></app-sub-components-current-balance>
 
               <div class="description" style="margin-bottom: 8vmin;">
-                <button class="ui fluid button" style="background: #48B1BF; color: white; border-radius: 3vmin; font-size: 4vw;">Redeem Now</button>
+                <button class="ui fluid button" style="background: #48B1BF; color: white; border-radius: 3vmin; font-size: 4vw;" routerLink="/redeem">Redeem Now</button>
               </div>
 
               <div class="description">
