--- a/src/app/wallet-page/wallet-page.component.html
+++ b/src/app/wallet-page/wallet-page.component.html
@@ -13,7 +13,7 @@
 
       <div class="row">
         <div class="sixteen wide column">
-          <div class="ui card" style="border-radius: 3vmin; width: 100%;padding-bottom: 5em ;height: 90vh;">
+          <div class="ui card" style="border-radius: 3vmin; width: 100%;padding-bottom: 40%; height: 90vh;">
             <div class="content">
 
               <app-sub-components-current-balance [amount]="'197.0'"></app-sub-components-current-balance>
