--- a/src/app/lucky-draw-results/lucky-draw-results.component.html
+++ b/src/app/lucky-draw-results/lucky-draw-results.component.html
@@ -4,12 +4,12 @@
 
       <div class="row">
         <div class="five wide column">
-          <img src="assets/images/left-arrow.png" class="ui icon" [routerLink]="'/home'">
+          <img src="assets/images/left-arrow.png" style="width: 7vmin;" class="ui icon" [routerLink]="'/home'">
         </div>
         <div class="eleven wide column font-size-5vw" style="color: white;"></div>
       </div>
 
-      <div class="row" style="padding-top: 1.5em;">
+      <div class="row" style="padding-top: 5vmin;">
         <div class="sixteen wide column">
           <div class="bold-font-weight font-roboto text-white font-size-9vw">Results</div>
           <div class="font-rancho text-white pt-5 line-height-normal" style="font-size: 5vw;">Ones a winner, will always be a winner. In our hall of fame.</div>
@@ -18,7 +18,7 @@
 
       <div class="row">
         <div class="sixteen wide column">
-          <div class="ui card add-scrolling hide-scrollbar" style="border-radius: 3vmin; width: 100%; padding-bottom: 15vh;">
+          <div class="ui card add-scrolling hide-scrollbar" style="height: 80vh;border-radius: 3vmin; width: 100%; padding-bottom: 40%;">
 
             <div class="content line-height-normal" style="padding-bottom: 0">
               <div class="left floated ui image" style="width: 27.5%;">
